<resources>
    <string name="app_name">proekt16092019</string>
    <string name="title_text">Avengers: Endgame</string>
    <string name="Released_text">Released</string>
    <string name="April_text">April 22, 2109</string>
    <string name="Overview_text">Overview:</string>
    <string name="Star_Wars_text">Star WarsStarWars ranks second in history for:</string>
    <string name="total_text">total box office grossing among all movie franchises,</string>
    <string name="second_text">second only to the Marvel universe movie series</string>
    <string name="dinazavr_text">Jurassic World is a 2015 American science fiction advent
        ure film, the fourth installment of the Jurassic Park film series, and the first film in the Jurassic World franchis Patrick</string>

    <string name="meg_text">The Meg is a 2018 science fiction action film directed by Jon Turteltaub with a screenplay by Dean Georgaris, Jon Hoeber, and Erich Hoeber, loosely based </string>

    <string name="purge_text">In history, religion and political science, a purge is a removal of people who are considered undesirable by those in power from a  </string>
    <string name="deadpool_text">second only to the Marvel universe movie series</string>
    <string name="blac_panter_text">Though sudden and violent purges are notable, most purges do not involve immediate execution or imprisonment, for example thommunist Party of</string>
    <string name="ocean_text">1933–1934. Mao Zedong and his associates purged much of the Chinese Communist Partys leadership, including the head of state, President Liu Shaoqi and the tral Secretary, Den966 </string>








</resources>




