<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_movies"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoviesActivity"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="80dp">


    <!--ImageView
        android:id="@+id/dinazavr"
        android:src="@drawable/dinazavr"
        android:layout_width="100dp"
        android:layout_height="120dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="430dp"
        /-->


    <ImageView
        android:id="@+id/dinazavr"
        android:layout_width="73dp"
        android:layout_height="131dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dinazavr" />

    <ImageView
        android:id="@+id/meg"
        android:layout_width="73dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="119dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/meg" />

    <!--ImageView
        android:id="@+id/meg"
        android:src="@drawable/meg"
        android:layout_width="100dp"
        android:layout_height="120dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="430dp"
        /-->
    <ImageView
        android:id="@+id/purge"
        android:layout_width="73dp"
        android:layout_height="131dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="226dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/purge" />

    <ImageView
        android:id="@+id/deadpool"
        android:layout_width="73dp"
        android:layout_height="131dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="339dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/deadpool"/>

    <ImageView
        android:id="@+id/blac_panter"
        android:layout_width="73dp"
        android:layout_height="131dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="453dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/blac_panter"/>


    <ImageView
        android:id="@+id/ocean"
        android:layout_width="73dp"
        android:layout_height="131dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="567dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ocean" />

    <!--ImageView
        android:id="@+id/ocean"
        android:src="@drawable/ocean"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:layout_marginBottom="0dp"
        tools:layout_editor_absoluteX="dp"
        tools:layout_editor_absoluteY="650dp"/>
        /-->


    <TextView
        android:id="@+id/dinazavr_txt"
        android:layout_width="270dp"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"

        android:text="@string/dinazavr_text"
        />

    <TextView
        android:id="@+id/meg_txt"
        android:layout_width="270dp"
        android:layout_height="120dp"
        android:layout_marginBottom="0dp"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"

        android:text="@string/meg_text"
        />

    <TextView
        android:id="@+id/purge_txt"
        android:layout_width="270dp"
        android:layout_height="120dp"
        android:layout_marginBottom="0dp"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        android:text="@string/purge_text"
        />

    <TextView
        android:id="@+id/deadpool_txt"
        android:layout_width="270dp"
        android:layout_height="120dp"
        android:layout_marginBottom="0dp"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="410dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74"
        android:text="@string/deadpool_text"
        />

    <TextView
        android:id="@+id/blac_panter_txt"
        android:layout_width="270dp"
        android:layout_height="120dp"
        android:layout_marginBottom="0dp"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="530dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        android:text="@string/blac_panter_text"
        />

    <TextView
        android:id="@+id/ocean_txt"
        android:layout_width="270dp"
        android:layout_height="120dp"
        android:layout_marginBottom="0dp"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="660dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.21"
        android:text="@string/ocean_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

